--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-    <h1>Πατήστε το κουμπί για να σας "ματιάσω"!</h1>
+    <h1>Πατήστε το κουμπί για να σας "ξεματιάσω"!</h1>
 
     <!-- Κουμπί που όταν πατηθεί, δείχνει το μάτι και το μήνυμα -->
     <button onclick="ματιάσμα()">Ματιάσου!</button>
