--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h1>Πατήστε το κουμπί για να σας "ξεματιάσω"!</h1>
 
     <!-- Κουμπί που όταν πατηθεί, δείχνει το μάτι και το μήνυμα -->
-    <button onclick="ματιάσμα()">Ματιάσου!</button>
+    <button onclick="ματιάσμα()">Ξεματιάσου!</button>
 
     <!-- Κύκλος που μοιάζει με το μάτι του Nazar -->
     <div class="eye-circle hidden" id="eyeCircle">
