--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="el">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="xematiazoicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ματιάσμα</title>
     <style>
